[package]
name = "ttc18_dbsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
dbsp = { git = "https://github.com/feldera/feldera.git", tag = "v0.9.0" }

[patch.crates-io]
rkyv = { git = "https://github.com/gz/rkyv.git", rev = "3d3fd86" }
rust_decimal = { git = "https://github.com/gz/rust-decimal.git", rev = "ea85fdf" }
size-of = { git = "https://github.com/gz/size-of.git", rev = "3ec40db" }
